After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 585407 - can't parse http://www.davidco.com/podcast.php
can't parse http://www.davidco.com/podcast.php
Status: RESOLVED FIXED
Product: totem-pl-parser
Classification: Core
Component: General
2.27.x
Other Linux
: Normal normal
: ---
Assigned To: totem-pl-parser-maint
totem-pl-parser-maint
: 605758 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2009-06-11 02:56 UTC by Jonathan Matthew
Modified: 2009-12-30 20:28 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Jonathan Matthew 2009-06-11 02:56:12 UTC
Parsing this feed currently fails, apparently due to the way cdata sections are marked up.  The feed uses '<![CDATA[ ... <!-- ]]> -->' for some reason.  The parser doesn't see the ]]> because of the surrounding comment tags, or at least removing them from the first cdata section makes the parser fail a bit further in.
Comment 1 Antoine Jacoutot 2009-12-13 13:39:33 UTC
The commit 5e76577f299436cac38260012db37fb1fe475484 which fixes this issue makes use of memmem that is a GNU extension.
As a result, totem-pl-parser is not buildable on OpenBSD anymore.
Comment 2 Bastien Nocera 2009-12-14 10:47:36 UTC
Antoine, please file a separate bug about it. A link to a BSD version of memmem would also be appreciated.
Comment 3 Bastien Nocera 2009-12-14 10:54:29 UTC
Never mind, fixed in master.

commit fc603d2f98802ae20f4902f2b1dd589b891595b6
Author: Bastien Nocera <hadess@hadess.net>
Date:   Mon Dec 14 10:53:20 2009 +0000

    Use g_strstr_len() instead of GNU extension memmem
Comment 4 Antoine Jacoutot 2009-12-14 11:49:04 UTC
Ok, that was fast, thanks a lot!
It compiles fine now.
Comment 5 Philip Withnall 2009-12-30 20:28:39 UTC
*** Bug 605758 has been marked as a duplicate of this bug. ***