Don't zero comments that start withing CDATA

Fixed parsing of http://www.davidco.com/podcast.php

https://bugzilla.gnome.org/show_bug.cgi?id=585407